src/main/java/edu/uiowa/jopenmm/AmoebaOpenMMLibrary.java

	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setSoftcorePower(OpenMM_AmoebaVdwForce*, int)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param n a int.
	 */
	public static native void OpenMM_AmoebaVdwForce_setSoftcorePower(PointerByReference target, int n);
	/**
	 * Original signature : <code>int OpenMM_AmoebaVdwForce_getSoftcorePower(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaVdwForce_getSoftcorePower(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setSoftcoreAlpha(OpenMM_AmoebaVdwForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param alpha a double.
	 */
	public static native void OpenMM_AmoebaVdwForce_setSoftcoreAlpha(PointerByReference target, double alpha);
	/**
	 * Original signature : <code>double OpenMM_AmoebaVdwForce_getSoftcoreAlpha(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaVdwForce_getSoftcoreAlpha(PointerByReference target);
	/**
	 * Original signature : <code>OpenMM_AmoebaVdwForce_AlchemicalMethod OpenMM_AmoebaVdwForce_getAlchemicalMethod(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaVdwForce_getAlchemicalMethod(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_setAlchemicalMethod(OpenMM_AmoebaVdwForce*, OpenMM_AmoebaVdwForce_AlchemicalMethod)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param method a int.
	 */
	public static native void OpenMM_AmoebaVdwForce_setAlchemicalMethod(PointerByReference target, int method);
	/**
	 * Original signature : <code>void OpenMM_AmoebaVdwForce_updateParametersInContext(OpenMM_AmoebaVdwForce*, OpenMM_Context*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param context a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaVdwForce_updateParametersInContext(PointerByReference target, PointerByReference context);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaVdwForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaVdwForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaVdwForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/**
	 * Original signature : <code>OpenMM_AmoebaMultipoleForce* OpenMM_AmoebaMultipoleForce_create()</code>
	 *
	 * @return a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native PointerByReference OpenMM_AmoebaMultipoleForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_destroy(OpenMM_AmoebaMultipoleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaMultipoleForce_getNumMultipoles(const OpenMM_AmoebaMultipoleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaMultipoleForce_getNumMultipoles(PointerByReference target);
	/**
	 * Original signature : <code>OpenMM_AmoebaMultipoleForce_NonbondedMethod OpenMM_AmoebaMultipoleForce_getNonbondedMethod(const OpenMM_AmoebaMultipoleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaMultipoleForce_getNonbondedMethod(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setNonbondedMethod(OpenMM_AmoebaMultipoleForce*, OpenMM_AmoebaMultipoleForce_NonbondedMethod)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param method a int.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_setNonbondedMethod(PointerByReference target, int method);
	/**
	 * Original signature : <code>OpenMM_AmoebaMultipoleForce_PolarizationType OpenMM_AmoebaMultipoleForce_getPolarizationType(const OpenMM_AmoebaMultipoleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaMultipoleForce_getPolarizationType(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPolarizationType(OpenMM_AmoebaMultipoleForce*, OpenMM_AmoebaMultipoleForce_PolarizationType)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param type a int.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_setPolarizationType(PointerByReference target, int type);
	/**
	 * Original signature : <code>double OpenMM_AmoebaMultipoleForce_getCutoffDistance(const OpenMM_AmoebaMultipoleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaMultipoleForce_getCutoffDistance(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setCutoffDistance(OpenMM_AmoebaMultipoleForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param distance a double.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_setCutoffDistance(PointerByReference target, double distance);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParameters(const OpenMM_AmoebaMultipoleForce*, double*, int*, int*, int*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param alpha a {@link java.nio.DoubleBuffer} object.
	 * @param nx a {@link java.nio.IntBuffer} object.
	 * @param ny a {@link java.nio.IntBuffer} object.
	 * @param nz a {@link java.nio.IntBuffer} object.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_getPMEParameters(PointerByReference target, DoubleBuffer alpha, IntBuffer nx, IntBuffer ny, IntBuffer nz);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParameters(const OpenMM_AmoebaMultipoleForce*, double*, int*, int*, int*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param alpha a {@link com.sun.jna.ptr.DoubleByReference} object.
	 * @param nx a {@link com.sun.jna.ptr.IntByReference} object.
	 * @param ny a {@link com.sun.jna.ptr.IntByReference} object.
	 * @param nz a {@link com.sun.jna.ptr.IntByReference} object.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_getPMEParameters(PointerByReference target, DoubleByReference alpha, IntByReference nx, IntByReference ny, IntByReference nz);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPMEParameters(OpenMM_AmoebaMultipoleForce*, double, int, int, int)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param alpha a double.
	 * @param nx a int.
	 * @param ny a int.
	 * @param nz a int.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_setPMEParameters(PointerByReference target, double alpha, int nx, int ny, int nz);
	/**
	 * Original signature : <code>double OpenMM_AmoebaMultipoleForce_getAEwald(const OpenMM_AmoebaMultipoleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaMultipoleForce_getAEwald(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setAEwald(OpenMM_AmoebaMultipoleForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param aewald a double.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_setAEwald(PointerByReference target, double aewald);
	/**
	 * Original signature : <code>int OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(const OpenMM_AmoebaMultipoleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(const OpenMM_AmoebaMultipoleForce*, OpenMM_IntArray*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param gridDimension a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(PointerByReference target, PointerByReference gridDimension);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(OpenMM_AmoebaMultipoleForce*, const OpenMM_IntArray*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param gridDimension a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(PointerByReference target, PointerByReference gridDimension);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(const OpenMM_AmoebaMultipoleForce*, const OpenMM_Context*, double*, int*, int*, int*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param context a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param alpha a {@link java.nio.DoubleBuffer} object.
	 * @param nx a {@link java.nio.IntBuffer} object.
	 * @param ny a {@link java.nio.IntBuffer} object.
	 * @param nz a {@link java.nio.IntBuffer} object.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(PointerByReference target, PointerByReference context, DoubleBuffer alpha, IntBuffer nx, IntBuffer ny, IntBuffer nz);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(const OpenMM_AmoebaMultipoleForce*, const OpenMM_Context*, double*, int*, int*, int*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param context a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param alpha a {@link com.sun.jna.ptr.DoubleByReference} object.
	 * @param nx a {@link com.sun.jna.ptr.IntByReference} object.
	 * @param ny a {@link com.sun.jna.ptr.IntByReference} object.
	 * @param nz a {@link com.sun.jna.ptr.IntByReference} object.
	 */
	public static native void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(PointerByReference target, PointerByReference context, DoubleByReference alpha, IntByReference nx, IntByReference ny, IntByReference nz);
